--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,59 +1,78 @@
 :root {
-  --primere-text-color: #757575;
+  --basic-grey-color: #757575;
+  --secondary-grey-color: #f5f4fa;
+  --deep-black-color: #000000;
+  --basic-black-color: #212121;
+  --secondary-black-color: #2f303a;
+  --basic-blu-color: #2196f3;
+  --secondary-blu-color: #188ce8;
+  --basic-white-color: #ffffff;
+  --secondary-white-color: #f5f5f5;
+  --alternative-white-color: #eeeeee;
+  --alternative-rgba-white-color: rgba(255, 255, 255, 0.6);
 }
 
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-.body {
+body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
-  color: var(--primere-text-color);
+  letter-spacing: 0.03em;
+  color: var(--basic-grey-color);
+  background-color: var(--basic-white-color);
+}
+
+.header {
+  background-color: var(--basic-white-color);
 }
 
 .navigation__logo,
 .footer__logo {
-  font-family: 'Raleway';
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
-  line-height: 1.2;
-  color: #2196f3;
+  line-height: 1.19;
   text-decoration: none;
+  color: var(--basic-blu-color);
 }
 
 .navigation__logo .logo__part {
-  color: #000000;
+  color: var(--deep-black-color);
 }
 
 .navigation__list,
 .contacts {
   font-weight: 500;
   line-height: 1.14;
+  letter-spacing: 0.02em;
   list-style-type: none;
 }
 
 .header .item__link {
   text-decoration: none;
-  color: #212121;
+  color: var(--basic-black-color);
 }
 
 .header .item__link:hover,
-.header .item__link:focus {
-  color: #2196f3;
+.header .item__link:focus,
+.header .item__link:active {
+  color: var(--basic-blu-color);
 }
 
 .contacts .link__mail {
-  color: #757575;
+  color: var(--basic-grey-color);
 }
 
 .contacts .link__phone {
-  color: #757575;
+  color: var(--basic-grey-color);
 }
 /* Временный задний цвет, фон для видимости логотипа */
 .hero {
-  background-color: #2f303a;
+  background-color: var(--secondary-black-color);
 }
 
 .hero__title {
@@ -62,25 +81,35 @@
   line-height: 1.36;
   text-align: center;
   text-transform: uppercase;
-  color: #ffffff;
+  letter-spacing: 0.06em;
+  color: var(--basic-white-color);
 }
 
 .hero .button {
   width: 216px;
   height: 50px;
-  background-color: #2196f3;
+  background-color: var(--basic-blu-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.89;
-  color: #ffffff;
+  letter-spacing: 0.06em;
+  color: var(--basic-white-color);
   padding: 10px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
+}
+
+.hero .button:hover,
+.hero .button:focus,
+.hero .button:active {
+  background-color: var(--secondary-blu-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 /* Скрытые заголовки */
 .title__hidden {
@@ -90,17 +119,18 @@
 .features__list {
   list-style-type: none;
 }
-
+/*TODO Почему стили заданные <body> не распространились на эти заголовки (Размер шрифта) и пришлось его прописывать здесь отдельно? */
 .features__list .item__title {
-  font-weight: 700px;
+  font-weight: 700;
+  font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  color: #212121;
+  color: var(--basic-black-color);
 }
 
 .features__list .item__paragraph {
-  line-height: 1.7;
-  color: var(--primere-text-color);
+  line-height: 1.71;
+  color: var(--basic-grey-color);
 }
 
 .gallery__list {
@@ -113,7 +143,11 @@
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
-  color: #212121;
+  color: var(--basic-black-color);
+}
+
+.our-team {
+  background-color: var(--secondary-grey-color);
 }
 
 .our-team__list {
@@ -121,14 +155,21 @@
 }
 
 .our-team__list .list__item {
-  line-height: 1.18;
   text-align: center;
+  color: var(--basic-grey-color);
+  background-color: var(--basic-white-color);
 }
 
 .our-team__list .item__title {
   font-weight: 500;
   font-size: 16px;
-  color: #212121;
+  line-height: 1.18;
+  color: var(--basic-black-color);
+}
+
+.our-team__list .item__paragraph {
+  font-size: 16px;
+  line-height: 1.18;
 }
 /* Временный задний цвет, фон для видимости логотипа  */
 .footer {
@@ -136,81 +177,94 @@
 }
 
 .footer__logo .logo__part {
-  color: #ffffff;
+  color: var(--basic-white-color);
 }
 
 .address__list {
   list-style-type: none;
+  font-style: normal;
 }
 
 .address__list .link__map {
-  line-height: 1.7;
+  line-height: 1.71;
   text-decoration: none;
-  color: #ffffff;
+  color: var(--basic-white-color);
 }
 
 .link__map:hover,
-.link__map:focus {
-  color: #2196f3;
+.link__map:focus,
+.link__map:active {
+  color: var(--basic-blu-color);
 }
 
 .address__list .link__mail {
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--alternative-rgba-white-color);
 }
 
 .address__list .link__mail:hover,
-.address__list .link__mail:focus {
-  color: #2196f3;
+.address__list .link__mail:focus,
+.address__list .link__mail:active {
+  color: var(--basic-blu-color);
 }
 
 .address__list .link__phone {
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--alternative-rgba-white-color);
 }
 
 .address__list .link__phone:hover,
-.address__list .link__phone:focus {
-  color: #2196f3;
+.address__list .link__phone:focus,
+.address__list .link__phone:active {
+  color: var(--basic-blu-color);
 }
 
-.filter__list {
+.list__filter {
   list-style-type: none;
 }
 
-.filter__list .button {
-  width: 112px;
-  height: 38px;
-  background-color: #f5f4fa;
+.list__filter .button {
+  /* width: 112px;
+  height: 38px; */
+  background-color: var(--secondary-grey-color);
   border-radius: 4px;
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.6;
+  line-height: 1.63;
   text-align: center;
-  color: #212121;
+  color: var(--basic-black-color);
   cursor: pointer;
 }
 
-.filter__list .button:hover,
-.filter__list .button:focus {
-  background-color: #2196f3;
+.list__filter .button:hover,
+.list__filter .button:focus,
+.list__filter .button:active {
+  background-color: var(--basic-blu-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  color: #ffffff;
+  color: var(--basic-white-color);
 }
 
-.portfolio__cards .cards__list {
+.list__cards {
   list-style-type: none;
 }
 
-.portfolio__cards .list__item .item__title {
+.list__cards .item__link {
+  text-decoration: none;
+  background-color: var(--basic-white-color);
+}
+
+.list__cards .link__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
-  color: #212121;
+  letter-spacing: 0.06em;
+  color: var(--basic-black-color);
 }
 
-.portfolio__cards .list__item .item__paragraph {
+.list__cards .link__paragraph {
   font-size: 16px;
   line-height: 1.87;
+  color: var(--basic-grey-color);
 }
