--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,11 +12,11 @@
   --alternative-rgba-white-color: rgba(255, 255, 255, 0.6);
 }
 
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} */
 
 body {
   font-family: 'Roboto', sans-serif;
