--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,81 +1,13 @@
-:root {
-  --basic-grey-color: #757575;
-  --secondary-grey-color: #f5f4fa;
-  --deep-black-color: #000000;
-  --basic-black-color: #212121;
-  --secondary-black-color: #2f303a;
-  --basic-blu-color: #2196f3;
-  --secondary-blu-color: #188ce8;
-  --basic-white-color: #ffffff;
-  --secondary-white-color: #f5f5f5;
-  --alternative-white-color: #eeeeee;
-  --alternative-rgba-white-color: rgba(255, 255, 255, 0.6);
-}
-
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-} */
-
-body {
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  letter-spacing: 0.03em;
-  color: var(--basic-grey-color);
-  background-color: var(--basic-white-color);
-}
-
-.header {
-  background-color: var(--basic-white-color);
-}
-
-.navigation__logo,
-.footer__logo {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  text-decoration: none;
-  color: var(--basic-blu-color);
-}
-
-.navigation__logo .logo__part {
-  color: var(--deep-black-color);
-}
-
-.navigation__list,
-.contacts {
-  font-weight: 500;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  list-style-type: none;
-}
-
-.header .item__link {
-  text-decoration: none;
-  color: var(--basic-black-color);
-}
-
-.header .item__link:hover,
-.header .item__link:focus,
-.header .item__link:active {
-  color: var(--basic-blu-color);
-}
-
-.contacts .link__mail {
-  color: var(--basic-grey-color);
-}
-
-.contacts .link__phone {
-  color: var(--basic-grey-color);
-}
 /* Временный задний цвет, фон для видимости логотипа */
-.hero {
+.general {
+  padding: 200px 0;
+  text-align: center;
   background-color: var(--secondary-black-color);
 }
 
-.hero__title {
+.general__title {
+  margin: 0 auto;
+  max-width: 700px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -85,32 +17,10 @@ body {
   color: var(--basic-white-color);
 }
 
-.hero .button {
-  width: 216px;
-  height: 50px;
-  background-color: var(--basic-blu-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.89;
-  letter-spacing: 0.06em;
-  color: var(--basic-white-color);
-  padding: 10px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  cursor: pointer;
+.general__action {
+  margin-top: 30px;
 }
 
-.hero .button:hover,
-.hero .button:focus,
-.hero .button:active {
-  background-color: var(--secondary-blu-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
 /* Скрытые заголовки */
 .title__hidden {
   display: none;
@@ -119,7 +29,17 @@ body {
 .features__list {
   list-style-type: none;
 }
-/*TODO Почему стили заданные <body> не распространились на эти заголовки (Размер шрифта) и пришлось его прописывать здесь отдельно? */
+
+.features__list .list__item {
+  margin-right: 20px;
+}
+
+.features__list .list__item:last-child,
+.gallery__list .list__item:last-child,
+.our-team__list .list__item:last-child {
+  margin-right: 0;
+}
+
 .features__list .item__title {
   font-weight: 700;
   font-size: 14px;
@@ -130,11 +50,23 @@ body {
 
 .features__list .item__paragraph {
   line-height: 1.71;
+  margin-top: 10px;
   color: var(--basic-grey-color);
 }
 
 .gallery__list {
   list-style-type: none;
+  margin-top: 50px;
+}
+
+.gallery__list .list__item {
+  margin-right: 30px;
+}
+
+.item__picture {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .gallery__title,
@@ -151,13 +83,28 @@ body {
 }
 
 .our-team__list {
+  margin-top: 50px;
   list-style-type: none;
 }
 
 .our-team__list .list__item {
+  margin-right: 30px;
   text-align: center;
   color: var(--basic-grey-color);
   background-color: var(--basic-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.our-team__list .item__content {
+  padding: 30px 0;
+}
+
+.our-team__list .item__position {
+  margin-top: 10px;
+  font-size: 16px;
+  line-height: 1.18;
 }
 
 .our-team__list .item__title {
@@ -167,104 +114,3 @@ body {
   color: var(--basic-black-color);
 }
 
-.our-team__list .item__paragraph {
-  font-size: 16px;
-  line-height: 1.18;
-}
-/* Временный задний цвет, фон для видимости логотипа  */
-.footer {
-  background-color: #2f303a;
-}
-
-.footer__logo .logo__part {
-  color: var(--basic-white-color);
-}
-
-.address__list {
-  list-style-type: none;
-  font-style: normal;
-}
-
-.address__list .link__map {
-  line-height: 1.71;
-  text-decoration: none;
-  color: var(--basic-white-color);
-}
-
-.link__map:hover,
-.link__map:focus,
-.link__map:active {
-  color: var(--basic-blu-color);
-}
-
-.address__list .link__mail {
-  text-decoration: none;
-  color: var(--alternative-rgba-white-color);
-}
-
-.address__list .link__mail:hover,
-.address__list .link__mail:focus,
-.address__list .link__mail:active {
-  color: var(--basic-blu-color);
-}
-
-.address__list .link__phone {
-  text-decoration: none;
-  color: var(--alternative-rgba-white-color);
-}
-
-.address__list .link__phone:hover,
-.address__list .link__phone:focus,
-.address__list .link__phone:active {
-  color: var(--basic-blu-color);
-}
-
-.list__filter {
-  list-style-type: none;
-}
-
-.list__filter .button {
-  /* width: 112px;
-  height: 38px; */
-  background-color: var(--secondary-grey-color);
-  border-radius: 4px;
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.63;
-  text-align: center;
-  color: var(--basic-black-color);
-  cursor: pointer;
-}
-
-.list__filter .button:hover,
-.list__filter .button:focus,
-.list__filter .button:active {
-  background-color: var(--basic-blu-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  color: var(--basic-white-color);
-}
-
-.list__cards {
-  list-style-type: none;
-}
-
-.list__cards .item__link {
-  text-decoration: none;
-  background-color: var(--basic-white-color);
-}
-
-.list__cards .link__title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-  color: var(--basic-black-color);
-}
-
-.list__cards .link__paragraph {
-  font-size: 16px;
-  line-height: 1.87;
-  color: var(--basic-grey-color);
-}
