--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -8,12 +8,19 @@
 }
 
 .navigation__list .item__link {
-  padding: 32px;
+  padding: 32px 0;
   display: block;
 }
 
-.navigation__logo,
-.footer__logo {
+.navigation__list .list__item {
+  margin-right: 50px;
+}
+
+.navigation__list .list__item:last-child {
+  margin-right: 0;
+}
+
+.navigation__logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
