--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,6 +21,25 @@
   color: var(--basic-white-color);
 }
 
+.button {
+  padding: 10px 32px;
+  border-radius: 4px;
+  border: none;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.89;
+  letter-spacing: 0.06em;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.button:focus, .button:active, .button:hover {
+  background-color: var(--secondary-blue-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
 .general__action {
   margin-top: 30px;
 }
@@ -30,18 +49,18 @@
 }
 
 .features__list {
-  list-style-type: none;
+  gap: 30px;
 }
 
 .features__list .list__item {
-  margin-right: 20px;
+  flex-basis: calc((100% - 90px) / 4);
 }
 
-.features__list .list__item:last-child,
+/* .features__list .list__item:last-child,
 .gallery__list .list__item:last-child,
 .our-team__list .list__item:last-child {
   margin-right: 0;
-}
+} */
 
 .features__list .item__title {
   font-weight: 700;
@@ -58,12 +77,12 @@
 }
 
 .gallery__list {
-  list-style-type: none;
   margin-top: 50px;
+  gap: 30px;
 }
 
 .gallery__list .list__item {
-  margin-right: 30px;
+  flex-basis: calc((100% - 60px) / 3);
 }
 
 .item__picture {
@@ -87,11 +106,11 @@
 
 .our-team__list {
   margin-top: 50px;
-  list-style-type: none;
+  gap: 30px;
 }
 
 .our-team__list .list__item {
-  margin-right: 30px;
+  flex-basis: calc((100% - 90px) / 4);
   text-align: center;
   color: var(--basic-grey-color);
   background-color: var(--basic-white-color);
@@ -104,15 +123,16 @@
   padding: 30px 0;
 }
 
-.our-team__list .item__position {
-  margin-top: 10px;
-  font-size: 16px;
-  line-height: 1.18;
-}
-
 .our-team__list .item__title {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
   color: var(--basic-black-color);
 }
+
+.our-team__list .item__position {
+  margin-top: 10px;
+  font-size: 16px;
+  line-height: 1.18;
+}
+
